# rove

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  deploy.sh  go.mod  go.sum  regen-proto.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
ansible/: deploy.yml  hosts
ansible/roles/deploy/files/: rove.service
ansible/roles/deploy/handlers/: main.yml
ansible/roles/deploy/tasks/: main.yml
benches/: scalability_deliverable.rs
cmd/coordinator/: main.go
cmd/runner/: main.go
cmd/test_client/: main.go
docs/: C4_component.puml  C4_container.puml  C4_context.puml  C4_systemcontext.puml  language.md  requirements.md
example_binary/: Cargo.toml
example_binary/benches/: scalability_deliverable.rs
example_binary/src/: lib.rs  main.rs
frost/: Cargo.toml
frost/src/: lib.rs  series.rs  spatial.rs
golang/: go.mod  go.sum
golang/cmd/coordinator/: main.go
golang/cmd/test_client/: main.go
internal/titanlib/: go.mod
lustre_netatmo/: Cargo.toml
lustre_netatmo/src/: lib.rs
met_binary/: Cargo.toml
met_binary/benches/: scalability_deliverable.rs
met_binary/src/: main.rs
met_connectors/: Cargo.toml
met_connectors/src/: lib.rs
met_connectors/src/frost/: fetch.rs  mod.rs  series.rs  spatial.rs  util.rs
met_connectors/src/lustre_netatmo/: mod.rs
proto/: coordinator.proto  rove.proto  runner.proto  util.proto
proto/coordinator/: coordinator.proto
proto/runner/: runner.proto
python_client/: example_client.py  gen_python_binding.sh
rove/: Cargo.toml  build.rs
rove/proto/: coordinator.proto  rove.proto  util.proto
rove/src/: coordinator.rs  data_switch.rs  harness.rs  lib.rs  main.rs  runner.rs  server.rs
rove/src/data_switch/: frost.rs  lustre_netatmo.rs  mod.rs
rove/tests/: integration_test.rs
runner/: runner.cpp
sample_pipelines/fresh/: TA_PT1H.toml
src/: cache.rs  coordinator.rs  dag.rs  data_switch.rs  harness.rs  lib.rs  main.rs  pipeline.rs  runner.rs  scheduler.rs  server.rs  util.rs
src/cache/: duration.rs  duration_parser.rs  frost.rs  mod.rs
src/data_switch/: frost.rs  mod.rs
tests/: integration_test.rs
