[workspace]
members = [
  "met_binary",
  "met_connectors"
]

[workspace.package]
version = "0.1.1"
authors = ["Ingrid Rebecca Abraham <git@ingrids.email>"]
edition = "2021"
description = "System for real time spatial and timeseries quality control of weather data"
documentation = "https://docs.rs/rove"
readme = "README.md"
repository = "https://github.com/metno/rove"
license = "AGPL-3.0-only"
keywords = ["qc", "quality_control", "weather", "meteorology", "climate"]
categories = ["science::geo"]

[workspace.dependencies]
tonic = "0.7.2"
tokio = { version = "1.40.0", features = ["full"] }
prost = "0.10.4"
prost-types = "0.10"
olympian = "0.3.2"
tracing = "0.1.16"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
futures = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["net"] }
tempfile = "3.10.1"
tower = { version = "0.4" }
thiserror = "1.0.63"
chrono = "0.4.38"
chronoutil = "0.2.7"
async-trait = "0.1.81"
tonic-build = "0.7.2"
clap = { version = "4.5.16", features = ["derive"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3.0"

[package]
name = "rove"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [".github/", "ansible/", "deploy.sh", "docs", "python_client/"]

[dependencies]
tonic.workspace = true
tokio.workspace = true
prost.workspace = true
prost-types.workspace = true
olympian.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tower.workspace = true
thiserror.workspace = true
chrono.workspace = true
chronoutil.workspace = true
async-trait.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "scalability_deliverable"
harness = false
