[package]
name = "example_binary"
version = "0.1.0"
edition = "2021"

[dependencies]
rove = { path = ".." }
tokio.workspace = true
frost = { path = "../frost" }
lustre_netatmo = { path = "../lustre_netatmo" }
dagmar.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true
tonic.workspace = true
prost-types.workspace = true
tempfile.workspace = true
tokio-stream.workspace = true
tower.workspace = true
async-trait.workspace = true
chronoutil.workspace = true

[[bench]]
name = "scalability_deliverable"
harness = false
