[package]
name = "frost"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rove = { path = ".." }
async-trait.workspace = true
chrono.workspace = true
chronoutil.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true