[package]
name = "met_binary"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
rove = { path = ".." }
tokio.workspace = true
frost = { path = "../frost" }
lustre_netatmo = { path = "../lustre_netatmo" }
dagmar.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true
tonic.workspace = true
prost-types.workspace = true
tempfile.workspace = true
tokio-stream.workspace = true
tower.workspace = true
async-trait.workspace = true
chronoutil.workspace = true

[[bench]]
name = "scalability_deliverable"
harness = false
