[package]
name = "met_binary"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
rove = { path = ".." }
met_connectors = { path = "../met_connectors" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
