[package]
name = "rove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
tokio = { version = "1.18.2", features = ["full"] }
prost = "0.10.4"
prost-types = "0.10"
dagmar = { git = "https://github.com/intarga/dagmar" }
olympian = "0.2.1"
tracing = "0.1.16"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
futures = "0.3.21"
tokio-stream = { version = "0.1.8", features = ["net"] }
tempfile = "3.3.0"
tower = { version = "0.4" }
thiserror = "1.0.40"
chrono = "0.4.26"
chronoutil = "0.2.5"
async-trait = "0.1.71"

[build-dependencies]
tonic-build = "0.7.2"
